# Reminder

./: .gitignore  CMakeLists.txt  README.md  database-docker-macos.sh  database-docker-win.bat  gitignore.txt  vcpkg.json
Reminder/: CMakeLists.txt  Reminder.h  State.cpp  State.h  main.cpp
Reminder/Auth/: Database.cpp  Database.h  DatabaseConfig.json
Reminder/Auth/Model/: UserDAO.cpp  UserDAO.h
Reminder/Auth/Service/: SessionIdService.cpp  SessionIdService.h
Reminder/Config/: SFML SPECS.ini
Reminder/Database/: Database.cpp  Database.h  DatabaseConfig  DatabaseConfig.json
Reminder/Game/: GameProcess.cpp  GameProcess.h  GameState.cpp  GameState.h
Reminder/Init/: CMakeLists.txt  H_Init.h  init.cpp
Reminder/Sections/GameScreen/: GameScreen.cpp  GameScreen.h  GameScreenState.cpp  GameScreenState.h
Reminder/Sections/Main menu/: H_Main_menu.h  MainMenu.cpp  MainMenu.h  MainMenuState.cpp  MainMenuState.h  Main_menu.cpp
Reminder/Sections/PreesetsMenu/: PresetsMenu.cpp  PresetsMenu.h  PresetsMenuState.cpp  PresetsMenuState.h
Reminder/Sections/Settings/: H_settings.h  Settings.cpp  Settings.h  SettingsState.cpp  SettingsState.h
Reminder/Sections/Welcome Screen/: Welcome_screen.cpp
Reminder/Sections/WelcomeScreen/: H_Welcome_screen.h  WelcomeScreen.cpp  WelcomeScreen.h  WelcomeScreenState.cpp  WelcomeScreenState.h  Welcome_screen.cpp
Reminder/UI/: Button.cpp  Button.h  CMakeLists.txt  DropDownList.cpp  DropDownList.h  MultilineTextBox.hpp  TextBox.cpp  TextBox.h  UI_anims.cpp  UI_anims.h
Reminder/UI Animations/: UI_anims.cpp  UI_anims.h
